# uamp

./: .gitignore  CMakeLists.txt  README.md  build.sh
3dparty/taglib/taglib/toolkit/: taglib.h
app/: CMakeLists.txt  main.cpp
app/resources/: myres.qrc
app/src/: AudioFileStream.cpp  CMakeLists.txt  addtrack.cpp  connectactions.cpp  database.h  dtagmusic.cpp  dtagmusic.h  dtagmusic.ui  libraryformdialog.cpp  libraryformdialog.h  libraryformdialog.ui  libraryproxymodel.cpp  libraryproxymodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  musiccontrolinterface.cpp  musiccontrolinterface.h  musiccontrolinterface.ui  mytreewidgetitem.h  playercontrols.cpp  playercontrols.h  playercontrols.ui  playerwindow.cpp  playerwindow.cpp.autosave  playerwindow.h  playerwindow.ui  saveplaylist.cpp  setupplayer.cpp  setupplaylist.cpp  showtags.cpp  uamp.cpp  uamp.h  uamp.ui
